# CessnaAutopilot

./: .gitignore  CMakeLists.txt  README.md  launchFixedWingEnv.sh  launchIrisEnv.sh
include/MotorDriver/: MotorSpeedController.hpp
include/controller/: LQR.hpp  PID.hpp  PolePlacement.hpp  base.hpp
include/database/: database.hpp
include/enums/: enumerations.hpp
include/objects/: imu.hpp
include/publishers/: msgPublisher.hpp
include/subscribers/: msgSubscriber.hpp
install/: local_setup.sh  setup.sh
install/QuadcopterController/share/QuadcopterController/: package.bash  package.zsh
log/: latest_build
src/: CMakeLists.txt  main.cpp
src/MotorDriver/: CMakeLists.txt  MotorSpeedController.cpp
src/controller/: CMakeLists.txt  LQR.cpp  PID.cpp  PolePlacement.cpp  base.cpp
src/database/: CMakeLists.txt  database.cpp
src/objects/: CMakeLists.txt  imu.cpp
worlds/: cessna_simulation.world
